--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
 streamlit
+google-api-core
+google-cloud
+google-cloud-discoveryengine
+google-cloud-storage
+protobuf
+google-cloud-aiplatform
+google-auth
+google-api-python-client
+google-auth-oauthlib
